# workflows

./: .editorconfig  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  sonar-project.properties  worker.py
.github/workflows/: ci.yml
activities/: __init__.py  fixture.py  manifest.json  registry.py  specialized_agents.json  specialized_agents.py
activities/fixtures/: call_specialized_agent.json  create_human_task.json  http_get.json  log_message.json  record_child_engagement.json
activities/tools/: __init__.py  _docrepo_common.py  _heartbeat.py  child_engagement.py  docrepo_download.py  docrepo_upload.py  http_get.py  human_task.py  invoice_extraction.py  log_message.py  write_artifact.py
blueprints/acme/hello/v1/: cncf-sw.json  reactflow.json
blueprints/demo/cfo-real-posting-rec-1778509726423/v1/: cncf-sw.json  reactflow.json
blueprints/demo/e2e-1778500411116/v1/: cncf-sw.json  reactflow.json
blueprints/demo/e2e-1778500836550/v1/: cncf-sw.json  reactflow.json
blueprints/demo/e2e-1778500854162/v1/: cncf-sw.json  reactflow.json
blueprints/demo/e2e-1778500911174/v1/: cncf-sw.json  reactflow.json
blueprints/demo/e2e-1778501030906/v1/: cncf-sw.json  reactflow.json
blueprints/demo/error_handling/v1/: cncf-sw.json  reactflow.json
blueprints/demo/invoice_batch/v1/: cncf-sw.json  reactflow.json
blueprints/demo/iteration/v1/: cncf-sw.json  reactflow.json
blueprints/demo/order-flow-1778501238082/v1/: cncf-sw.json  reactflow.json
blueprints/demo/order-flow-test/v1/: cncf-sw.json  reactflow.json
blueprints/demo/parallel/v1/: cncf-sw.json  reactflow.json
blueprints/demo/sample/v1/: cncf-sw.json  reactflow.json
blueprints/sample/v1/: cncf-sw.json
docs/: ACTIVITY_CATALOG.md  ARCHITECTURE.md  COMPLIANCE.md  CONTRIBUTING.md  DEV_SETUP.md  DOCS_PLAN.md  FIXTURE_MODE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  IR_SPEC.md  MULTI_TENANT.md  OBSERVABILITY.md  PIPELINE.md  PUBLISH_FLOW.md  SECURITY.md  SESSION_STATE.md  WORKFLOW_RULES.md  team-update.html
docs/adr/: ADR-001-python-codegen-over-dsl.md  ADR-002-reactflow-source-of-truth.md  ADR-003-compiled-py-per-blueprint.md  ADR-004-cncf-sw-ir-as-contract.md  ADR-005-worker-versioning-build-id.md  ADR-006-tenancy-isolation.md
docs/codegen/: IR_TO_PYTHON.md  REACTFLOW_TO_IR.md
docs/runbooks/: 01-failed-workflow-rollback.md  02-stuck-activity.md  03-manifest-mismatch.md  04-version-cleanup.md
generator/: __init__.py  codegen.py  expression_eval.py  manifest.py
ir/: __init__.py  _base.py  document.py  errors.py  functions.py  policies.py  tasks.py  triggers.py
mapper/: __init__.py  reactflow_to_cncfsw.py
schemas/: ir.schema.json
scripts/: build_manifest.py  demo_mvp.py  export_ir_schema.py  regenerate_all.py  regenerate_workflow.py  validate_all.py
tests/: test_activities_basic.py  test_compliance.py  test_e2e_mvp_pipeline.py  test_e2e_pipeline.py  test_expression_eval.py  test_fixture.py  test_generator_basic.py  test_generator_expressions.py  test_generator_manifest_atomic.py  test_generator_subprocess.py  test_manifest_builder.py  test_mapper_basic.py  test_mapper_edge_cases.py  test_tool_docrepo_download.py  test_tool_docrepo_upload.py  test_tool_invoice_extraction.py  test_tool_write_artifact.py  test_utils_pdf.py  test_validator_basic.py  test_validator_rules.py
utils/: pdf.py
validator/: __init__.py  report.py  validator.py
