[project]
name = "workflow-platform"
version = "0.1.0"
description = "React Flow JSON -> CNCF Serverless Workflow IR -> generated Temporal Python"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "temporalio>=1.7",
    "pydantic>=2.7",
    "jq>=1.6",
    "fastapi>=0.111",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "mapper",
    "validator",
    "generator",
    "activities",
    "scripts",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["generated/workflows", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Testy walidatora używają nazw funkcji `test_A001_*` aby odpowiadać kodom reguł
# walidatora — czytelność > PEP 8 N802 (function names should be lowercase).
"tests/test_validator_rules.py" = ["N802"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["ir", "mapper", "validator", "generator", "activities"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
omit = [
    "tests/*",
    "scripts/*",
    "**/__init__.py",
    "generated/*",
]
show_missing = true
skip_covered = false
